--- a/src/app/header/header.keyframes.scss
+++ b/src/app/header/header.keyframes.scss
@@ -1,37 +1,51 @@
 @-moz-keyframes mozSlideIn {
     0% {
-        top: 0;
-        left: 0;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         height: 100vh;
-        width: 100%;
+        width: 100vw;
     }
 
     35% {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         height: 100vh;
-        width: 100%;
+        width: 100vw;
+    }
+
+    40% {
+        top: calc(50% - 40vh);
+        left: calc(50% - 40vw);
+        height: calc(80vh);
+        width: calc(80vw);
+        transform: none;
     }
 
     45% {
-        height: 85vh;
-        width: 85vw;
+        top: 0;
+        left: 0;
+        height: 80vh;
+        width: 80vw;
     }
 
     80% {
-        top: 0;
-        left: 0;
-        height: 200px;
+        top: 7px;
+        left: 50px;
         width: 400px;
+        height: 200px;
     }
 
     100% {
-        top: 8px;
-        left: -22px;
+        top: 7px;
+        left: 50px;
         width: 230px;
         height: 101px;
     }
 }
 
-@-moz-keyframes mozuslideInBig {
+@-moz-keyframes mozSlideInBig {
     0% {
         top: 0;
         left: calc(50vw - 960px);
@@ -45,21 +59,14 @@
     }
 
     45% {
-        height: 85%;
+        height: 80%;
         width: 1632px;
-    }
-
-    80% {
-        top: 0px;
-        height: 200px;
-        width: 400px;
     }
 
     100% {
         top: 8px;
-        left: -22px;
         width: 230px;
         height: 101px;
-        left: calc(50vw - 982px);
+        left: calc(50vw - 910px);
     }
 }
